pulled test bible data from api

--- a/index.html
+++ b/index.html
@@ -40,12 +40,14 @@
         border-right: 0px;
       }
     </style>
-
+    <script src="lib/pouchdb/dist/pouchdb.min.js"></script>
+    <script src="lib/lodash/dist/lodash.min.js"></script>
     <script src="js/app.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/controllers/controllers.js"></script>
     <script src="js/services/services.js"></script>
     <script src="js/directives/directives.js"></script>
+    <script src="js/services/bible-scraper.js"></script>
 
     <!-- Only required for Tab projects w/ pages in multiple tabs
     <script src="lib/ionicuirouter/ionicUIRouter.js"></script>
