--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
         border-right: 0px;
       }
     </style>
-    <script src="bower_components/pouchdb/dist/pouchdb.min.js"></script>
-    <script src="bower_components/lodash/dist/lodash.min.js"></script>
+    <script src="lib/pouchdb/dist/pouchdb.js"></script>
+    <script src="lib/lodash/dist/lodash.js"></script>
     <script src="js/app.js"></script>
     <script src="js/routes.js"></script>
     <script src="js/controllers/controllers.js"></script>
